amf-cli/shared/src/test/resources/parser-results/raml/error/chained/lib1.raml
#%RAML 1.0 Library
uses:
  lib2: lib2.raml
types:
  B:
    properties:
      b:
        lib2.A